# blog-course

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/comments/: models.py  views.py
apps/likes/: models.py  serializers.py  views.py
apps/posts/: models.py  views.py
apps/users/: models.py  serializers.py  urls.py  views.py
blog_course/: settings.py  urls.py  wsgi.py
