[tool.poetry]
name = "blog_course"
version = "0.1.0"
description = ""
authors = ["eugene bazarov <skwadet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^2.2.16"
djangorestframework = "^3.12.1"
loguru = "^0.5.3"
django-filter = "^2.4.0"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "<0.780"
django-stubs = "^1.5.0"
djangorestframework-stubs = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
